# mfja_3rd_floor_gz

./: .gitignore  =1  DETAILED_GUIDE.md  README.md  flake.nix  multi_robot_usage_guide.tex  nix_explanation_ar.html  runbook.html
6/: New Text Document (2).txt  New Text Document.txt  first_six_weeks_progress_report.tex  recqp_progress_report.tex  weekly_recap.tex
CSV/: A12E.csv  A12I.csv  A14.csv  A1G.csv  A1S.csv  A23.csv  A2G.csv  A2S.csv  A34E.csv  A34I.csv  A3G.csv  A3S.csv  A4G.csv  A4S.csv
Modélisation salle 314/: CLOSET1.stl  charging_ergotron.stl  table_180cm.stl  tiagobox.stl
Modélisation salle 315-20260305/: 315_room.stl  CELL_PATH_LEFT.STL  CELL_PATH_RIGHT.STL  CHAIR.STL  aiguillage3.stl  carter_droit.ttt  cell_static_droit_final.STL  cell_static_gauche_final.STL  closet115.stl  kuka_table.stl  scara_base2.stl  shutle_2_droit.stl  shuttle.STL  shuttle_1_droit.stl  shuttle_1_left.stl  shuttle_2_left.stl  staubli_table.stl  table.stl  table2000.stl  table_240cm.stl  table_yaskawa.stl  tool_set.stl
mfja_3rd_floor_bringup/launch/: full_floor.launch.py  room_315_only.launch.py  single_industrial_robot.launch.py
mfja_3rd_floor_description/models/cell_path_left/: model.sdf
mfja_3rd_floor_description/models/cell_path_right/: model.sdf
mfja_3rd_floor_description/models/rail_switch_3pos_droit/: model.sdf
mfja_3rd_floor_description/models/rail_switch_3pos_droit_static_black/: model.sdf
mfja_3rd_floor_description/models/room315_shuttle/: model.sdf
mfja_3rd_floor_description/models/room315_shuttle/meshes/: shuttle.STL
mfja_3rd_floor_description/models/staubli_tx2_60l/: model.config  model.sdf
mfja_3rd_floor_description/models/tiago_base/: model.config  model.sdf
mfja_3rd_floor_description/urdf/: kuka_kr6r900sixx.urdf  staubli_tx2_60l.urdf  tiago.urdf  tiago_base.urdf  yaskawa_hc10.urdf  yaskawa_hc10dt.urdf
mfja_3rd_floor_description/worlds/: isolated_industrial_robot.world  mfja_3rd_floor.world  room_315_only.world
mfja_3rd_floor_gz/: CMakeLists.txt  README.md
mfja_3rd_floor_gz/launch/: full_floor.launch.py  room_315_only.launch.py  single_industrial_robot.launch.py
mfja_rail_interfaces/: CMakeLists.txt  package.xml
mfja_rail_interfaces/msg/: SensorFeedback.msg  SensorReading.msg  ShuttleCommand.msg  ShuttleState.msg  StopperState.msg  SwitchState.msg
mfja_robot_control_config/: CMakeLists.txt  package.xml
mfja_robot_control_config/config/: robots.yaml  robots_room_315_only.yaml
mfja_robot_control_config/config/room_315_kinematics/: README.md  continuous_path_report.yaml  rail_devices_left.yaml  rail_devices_left_explanation_ar.html  rail_devices_right.yaml  rail_network.yaml  rail_network_left.yaml  rail_network_right.yaml  rail_network_right_explanation_ar.html  room_315_logic_explanation_ar.html  segment_summary.yaml  validation_report.yaml
mfja_robot_control_config/config/room_315_kinematics/normalized_segments/: A12E.csv  A12I.csv  A14.csv  A1G.csv  A1S.csv  A23.csv  A2G.csv  A2S.csv  A34E.csv  A34I.csv  A3G.csv  A3S.csv  A4G.csv  A4S.csv
mfja_robot_control_config/config/room_315_kinematics/raw_segments/: A1E.csv  A1I.csv  A2E.csv  A2I.csv  A3E.csv  A3I.csv  A4E.csv  A4I.csv
mfja_robot_control_config/config/room_315_kinematics/report_figures/: room_315_code_architecture_report_ar.html  week_08_progress_report.html
mfja_robot_control_config/launch/: isolated_industrial_robot.launch.py  multi_robot_sim.launch.py  room_315_dual_kinematic_shuttles.launch.py
mfja_robot_control_config/scripts/: conveyor_loop_mode_controller.py  room_315_continuous_path_validator.py  room_315_csv_preprocessor.py  room_315_device_position_tool.py  room_315_devices_validator.py  room_315_kinematic_shuttle.py  room_315_kinematic_shuttle_node.py  room_315_network_validator.py  room_315_report_figures.py  room_315_segment_plot.py
mfja_room_315_bringup/launch/: room_315_only.launch.py
mfja_staubli_demos/: README.md  package.xml  setup.py
mfja_staubli_demos/hpp/: room315_cell.srdf  room315_cell.urdf  room315_hpp_line.py  staubli_tx2_60l.srdf
mfja_staubli_demos/launch/: room_315_staubli_cartesian_demo.launch.py
mfja_staubli_demos/scripts/: room315_demo.sh  room315_env.sh  room315_hpp_line.sh
mfja_staubli_manipulation_demos/: README.md  package.xml  setup.py
mfja_staubli_manipulation_demos/config/: robots_room315_gripper.yaml  robots_room315_suction.yaml
mfja_staubli_manipulation_demos/docs/: room315_pick_place_walkthrough.md
mfja_staubli_manipulation_demos/hpp/: room315_cell.urdf  room315_execution.py  room315_payload_box.srdf  room315_payload_box.urdf  room315_planning.py  room315_problem.py  room315_shuttle_deck.srdf  room315_shuttle_deck.urdf  room315_shuttle_manipulation.py  room315_staubli_table_drop_zone.srdf  room315_staubli_table_drop_zone.urdf  staubli_tx2_60l_manipulation.srdf
mfja_staubli_manipulation_demos/launch/: room_315_staubli_shuttle_manipulation_demo.launch.py
mfja_staubli_manipulation_demos/models/staubli_tx2_60l_gripper/: model.config  model.sdf
mfja_staubli_manipulation_demos/models/staubli_tx2_60l_suction/: model.config  model.sdf
mfja_staubli_manipulation_demos/resource/: mfja_staubli_manipulation_demos
mfja_staubli_manipulation_demos/scripts/: room315_demo.sh  room315_env.sh  room315_hpp_manipulation.sh  room315_moving_shuttle_demo.sh  room315_moving_shuttle_sequence.py
mfja_staubli_manipulation_demos/urdf/: staubli_tx2_60l_gripper.urdf  staubli_tx2_60l_suction.urdf
worlds/: mfja_3rd_floor.world
