<?xml version="1.0"?>
<package format="3">
  <name>mfja_rail_interfaces</name>
  <version>0.1.0</version>
  <description>Typed ROS 2 interfaces for MFJA rail and Room 315 shuttle simulation.</description>
  <maintainer email="ali.ibrahim@etud.univ-evry.fr">Ali IBRAHIM</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
