<?xml version="1.0"?>
<package format="3">
  <name>mfja_robot_control_config</name>
  <version>1.0.0</version>
  <description>Shared robot runtime configuration, launch logic, and control utilities for MFJA simulations.</description>
  <maintainer email="olivier.stasse@laas.fr">Olivier Stasse</maintainer>
  <maintainer email="diane.bury@utoulouse.fr">Diane BURY</maintainer>
  <maintainer email="ali.ibrahim@etud.univ-evry.fr">Ali IBRAHIM</maintainer>
  <license>Apache License 2.0</license>
  <author email="ali.ibrahim@etud.univ-evry.fr">Ali IBRAHIM</author>
  <author email="olivier.stasse@laas.fr">Olivier Stasse</author>
  <author email="diane.bury@utoulouse.fr">Diane BURY</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mfja_3rd_floor_description</exec_depend>
  <exec_depend>mfja_rail_interfaces</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
